--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "scripts": {
     "start": "bun run index.ts",
-    "dev": "bun --watch run index.ts"
+    "dev": "bun --watch run index.ts",
+    "dev:migrate": "dotenv -e .env.development -- npx prisma migrate dev"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^5.0.5",
+    "dotenv-cli": "^11.0.0",
     "prisma": "^6.19.0"
   },
   "peerDependencies": {
@@ -17,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "zod": "^4.1.12"
